[gd_scene load_steps=3 format=3 uid="uid://dhs3o8j5vqxry"]

[ext_resource type="Script" uid="uid://bfgbnc827ecdo" path="res://scripts/main_scene.gd" id="1_bdhqr"]
[ext_resource type="Script" uid="uid://dqrlcdwxr8ero" path="res://scripts/menu.gd" id="2_yg7ej"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_bdhqr")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="InfoLabel" type="Label" parent="."]
offset_left = 350.0
offset_top = 250.0
offset_right = 800.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 36
text = "Press ESC to open menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource("2_yg7ej")

[node name="Overlay" type="ColorRect" parent="Menu"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="Panel" parent="Menu"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Menu/MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 42
text = "MENU"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Menu/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Resume" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="Options" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"

[node name="Credits" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="Quit" type="Button" parent="Menu/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Resume" to="Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Options" to="Menu" method="_on_options_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Credits" to="Menu" method="_on_credits_pressed"]
[connection signal="pressed" from="Menu/MenuPanel/VBoxContainer/Quit" to="Menu" method="_on_quit_pressed"]
